# fobox

./: .gitattributes  .gitignore  .gitmodules  README.md  scheme.drawio
dev/: .gitignore  email_tools.py  hcdp.py  htrf.py  manage.py  project.json  project.json.example  slinn_api.py
dev/Components/: auth_base.xml  banner.xml  base_component.xml  content.xml  fobox_base.xml  header.xml  wide_button.xml
dev/Palletes/: palletes.json
dev/Palletes/Containers/: flexbox.xml
dev/Palletes/Inputs/: textbox.xml
dev/Palletes/Others/: helloworld.xml
dev/Palletes/Texts/: label.xml
dev/admin/: __init__.py  app.py  db_init.py
dev/admin/Components/: auth_base.xml  errorbox.xml  fobox_base.xml  header.xml  helloworld.xml
dev/admin/views/: editor.view.xml  index.view.xml  main.view.xml
dev/app/: __init__.py  app.py
dev/app/views/: index.view.xml  test.view.xml
dev/auth/: __init__.py  app.py  config.json
dev/auth/Components/: fobox_base.xml  li_card.xml
dev/auth/views/: auth.view.xml  restore.view.xml  restore_step2.view.xml  signup.view.xml
dev/fobox/: __init__.py  app.py
dev/fobox/views/: main.view.xml
dev/screenshoter_adapter/: __init__.py  app.py
dev/spm_packages/: packages.json
geety/: main.py  pyproject.toml
geety/Components/: Card.xml
geety/geety/: __init__.py  app.py  component.py  exceptions.py  geety.js  get_geety_js.py  mime_types.py  misc.py  page.py  property.py  utils.py  xml_parser.py
orm/orm/: __init__.py  attributed_dict.py  order.py  typemap.py
playground/: demo.html  escaping.py  screenshoter.py  test.view.xml
(+87 files in other folders)
