[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geety"
version = "0.0.5"
description = "XML based web-language"
requires-python = ">=3.14"
authors = [{ name = "Mark Radin", email = "openmiot@gmail.com" }]

[project.optional-dependencies]
orm = ["fobox-orm"]
postgres = ["fobox-orm[postgres]"]
full = ["fobox-orm[full]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["geety*"]

[tool.setuptools.package-data]
geety = ["*.js"] 
